deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: packersmovers
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 1
  revisionHistoryLimit: 4
  replicas: 5
  minReadySeconds: 15
  selector:
    matchLabels:
      app: packersmovers
  template:
    metadata:
      labels:
        app: packersmovers
    spec:
      containers:
      - name: customer
        image: 573567580560.dkr.ecr.ap-south-1.amazonaws.com/customer:3
        imagePullPolicy: Always
        ports:
        - containerPort: 8081
