eks-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deployment
  labels:
    app: packersmovers
spec:
  replicas: 2
  selector:
    matchLabels:
      app: packersmovers
  template:
    metadata:
      labels:
        app: packersmovers
    spec:
      containers:
      - name: customer
        image: 778611043572.dkr.ecr.ap-south-1.amazonaws.com/batch14:2
        imagePullPolicy: Always
