eks-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: customer-pod
spec:
  containers:
  - name: customer
    image: 778611043572.dkr.ecr.us-east-1.amazonaws.com/customer:1
    ports:
    - containerPort: 8081
