deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer
  labels:
    app: packersmovers
    tier: backend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  revisionHistoryLimit: 4
  replicas: 2
  minReadySeconds: 10
  selector:
    matchLabels:
      app: packersmovers
      tier: backend
  template:
    metadata:
      labels:
        app: packersmovers
        tier: backend
    spec:
      containers:
      - name: customer
        image: sandeepkomalpothu/customer:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: packersmovers
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: packersmovers
    tier: backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
