service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: packersmovers
    tier: backend
spec:
  type: LoadBalancer
  selector:
    app: packersmovers
    tier: backend
  ports:
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8081
